edited research page

--- a/research.html
+++ b/research.html
@@ -42,7 +42,7 @@
     </div>
 
     <div class = "boxr rright1">
-      <img src="images/zro2.jpg" alt="A photo of me making a Zirconium Dioxide target.">
+      <img src="images/zro2.JPG" alt="A photo of me making a Zirconium Dioxide target.">
       <!-- src: Photo taken by Harry Chalfin provided by me. -->
     </div>
   </div>
